--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,4 +1,5 @@
 .button {
+  width: 100%;
   font: inherit;
   padding: 0.5rem 1.5rem;
   border: 1px solid #8b005d;
@@ -18,3 +19,11 @@
   border-color: #ac0e77;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.26);
 }
+
+@media (min-width: 768px) {
+  .button {
+    width: auto;
+  }
+}
+
+/* sử dụng responsive với @media (min-width: 768px) tức là các thiết bị lớn hơn 768px sẽ được thu lại nút button, còn thiết bị nhỏ hơn 768px như di động sẽ hiện width=100% */
