--- a/src/header/header.module.css
+++ b/src/header/header.module.css
@@ -2,7 +2,7 @@
   background-color: blue;
   color: white;
   width: 100%;
-  height: 350px;
+  height: 300px;
   margin: 0px;
 }
 .tieude {
@@ -17,6 +17,16 @@
 .inform {
   align-content: center;
   border-color: orange;
-  border-width: 2px;
+  border-width: 3px;
   border-style: solid;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  margin-top: -30px;
+  background-color: white;
+}
+
+.textForm {
+  padding: 10px;
+  margin-right: 70px;
+  border: none;
 }
