--- a/src/pages/search/search.css
+++ b/src/pages/search/search.css
@@ -8,5 +8,27 @@
 }
 .hinh {
   width: 100%;
-  height: 200px;
+  height: 300px;
+}
+.rate_text {
+}
+.rate {
+  float: right;
+}
+.inf {
+  text-align: right;
+  font-size: smaller;
+}
+.avail {
+  width: 100%;
+}
+
+.price {
+  text-align: right;
+  margin-top: 100%;
+}
+
+.box {
+  /* display: flex;
+  flex-wrap: wrap; */
 }
