--- a/src/pages/search/search.css
+++ b/src/pages/search/search.css
@@ -11,9 +11,13 @@
   height: 300px;
 }
 .rate_text {
+  font-weight: 700;
 }
 .rate {
   float: right;
+  background-color: rgb(10, 10, 144);
+  color: white;
+  padding: 10px 5px;
 }
 .inf {
   text-align: right;
@@ -21,14 +25,36 @@
 }
 .avail {
   width: 100%;
+  background-color: rgb(0, 98, 255);
+  color: white;
+  padding: 10px;
 }
 
 .price {
   text-align: right;
   margin-top: 100%;
+  font-size: larger;
+  font-weight: 600;
 }
 
 .box {
   /* display: flex;
   flex-wrap: wrap; */
+}
+.outfit {
+  background-color: orange;
+  padding: 10px;
+  border-radius: 5px;
+}
+.nut_search {
+  width: 100%;
+  background-color: rgb(0, 98, 255);
+  color: white;
+}
+.tag {
+  background-color: rgb(4, 183, 4);
+  padding: 5px;
+  border-radius: 5px;
+  color: white;
+  width: auto;
 }
