--- a/src/navbar/navbar.module.css
+++ b/src/navbar/navbar.module.css
@@ -9,9 +9,11 @@
   background-color: transparent;
 
   position: fixed;
+  z-index: 10;
 }
 .transfer {
   background-color: black;
+  z-index: 10;
 }
 .chu {
   height: auto;
