--- a/src/pages/browse/browse.module.css
+++ b/src/pages/browse/browse.module.css
@@ -1,14 +1,9 @@
-.back {
-  /* background-color: aqua; */
-  width: 100%;
-  height: 3000px;
-
-  border-width: 5px;
-  border-style: solid;
-  border-color: black;
-}
 .nut {
   margin-left: 50%;
   width: 100px;
   height: 100px;
+}
+.umbrella {
+  background-color: black;
+  color: white;
 }
