--- a/src/body/movieDetail.module.css
+++ b/src/body/movieDetail.module.css
@@ -1,5 +1,14 @@
 .frame {
-  width: 100%;
-  height: 200px;
-  background-color: yellow;
+  display: flex;
+  flex-direction: row;
+  /* width: 100%; */
+  height: 400px;
+  background-color: black;
+  padding: 0px 20px;
+}
+
+.frame > div {
+  width: 50%;
+  /* text-align: center; */
+  color: white;
 }
