--- a/src/homePage/Popup/Popup.module.css
+++ b/src/homePage/Popup/Popup.module.css
@@ -23,3 +23,24 @@
   background-color: transparent;
   border-color: transparent;
 }
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.75);
+}
+
+.modal {
+  position: fixed;
+  top: 30px;
+  left: 10%;
+  width: 80%;
+  z-index: 100;
+  overflow: hidden;
+  background: white;
+  border-radius: 10px;
+}
