--- a/src/data/buttonQuality.module.css
+++ b/src/data/buttonQuality.module.css
@@ -1,22 +1,9 @@
 /* Google fonts import link */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-} */
-/* body {
-  height: 100vh;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #343f4f;
-} */
+
 .wrapper {
-  height: 50px;
-  min-width: 180px;
+  height: auto;
+  min-width: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
