--- a/src/homePage/ListCategories.module.css
+++ b/src/homePage/ListCategories.module.css
@@ -14,15 +14,11 @@
 .frame img {
   width: 100%;
   height: auto;
-  z-index: -5;
+  opacity: 1;
 }
-.back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: red;
-  z-index: 5;
+
+.frame img:hover {
+  transition-duration: 0.5s;
+  opacity: 0.6;
 }
-.back :hover {
-  background-color: aquamarine;
-}
+/* phải ghi dính liền img:hover ko được tách ra */
