--- a/src/pages/CartPage.module.css
+++ b/src/pages/CartPage.module.css
@@ -4,6 +4,7 @@
 .left {
   width: 66%;
   height: auto;
+  margin-right: 5px;
 }
 .list {
   display: flex;
@@ -13,8 +14,49 @@
   width: 100%;
   padding: 5px;
 }
+.title {
+  background-color: rgb(211, 211, 211);
+}
 .right {
   width: 34%;
   height: auto;
   text-align: left;
+  background-color: rgb(211, 211, 211);
+  padding: 40px;
+}
+.right input {
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 0px;
+  margin-right: 10px;
+  padding: 20px 0px;
+}
+.right button {
+  width: 100%;
+  background-color: rgb(37, 37, 37);
+  color: white;
+  margin-top: 0px;
+  padding: 20px 0px;
+  margin-right: 0px;
+  font-size: large;
+}
+.priceRight {
+  text-align: right;
+  float: right;
+}
+.nav {
+  background-color: rgb(211, 211, 211);
+  width: 100%;
+  height: 50px;
+}
+.checkout {
+  float: right;
+  text-align: center;
+  padding: 10px;
+  border: solid black 2px;
+}
+.process {
+  float: left;
+  text-align: center;
+  padding: 10px;
 }
